--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,4 +1,7 @@
+@import "./reset";
+@import "./config/variables";
 @import "./modules/header";
 @import "./modules/main-left";
 @import "./modules/main-center";
 @import "./modules/aside";
+@import "./user";
