sign_up-viewの作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "./reset";
 @import "./config/variables";
+@import "./mixin/mixin";
 @import "./modules/header";
 @import "./modules/main-left";
 @import "./modules/main-center";
