--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -42,7 +42,7 @@
 
     .btn {
       margin-top: 20px;
-      color: $white;
+      color: #fff;
       background-color: #ccc;
       font-size: 14px;
     }
@@ -85,7 +85,7 @@
   input[type='submit'] {
     float: left;
     margin-top: 20px;
-    color: $white;
+    color: #fff;
     background-color: $orange;
   }
 
