header部分を作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,4 +5,6 @@
 @import "./modules/main-left";
 @import "./modules/main-center";
 @import "./modules/aside";
+@import "./modules/top-page";
+@import "./modules/mypage";
 @import "./user";
