--- a/app/assets/stylesheets/modules/_top-page.scss
+++ b/app/assets/stylesheets/modules/_top-page.scss
@@ -1,16 +1,3 @@
-p {
-    display: block;
-    -webkit-margin-before: 1em;
-    -webkit-margin-after: 1em;
-    -webkit-margin-start: 0px;
-    -webkit-margin-end: 0px;
-}
-
-li {
-    display: list-item;
-    text-align: -webkit-match-parent;
-}
-
 .retty-header {
     width: 100%;
     height: 60px;
@@ -123,6 +110,7 @@ li {
             a {
             background-color: #1e5f9c;
             width: 310px;
+            height: 30px;
             padding: 14px 0;
             margin: 0 auto;
             font-size: 18px;
@@ -134,8 +122,9 @@ li {
             }
             p {
             color: #fff;
-            font-size: 25px;
+            font-size: 20px;
             text-align: center;
+            margin: 0 auto;
             }
         }
 
