--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,9 +2,10 @@
 @import "./config/variables";
 @import "./mixin/mixin";
 @import "./modules/header";
-@import "./modules/main-left";
-@import "./modules/main-center";
+@import "./modules/mypage-left";
+@import "./modules/mypage-center";
 @import "./modules/aside";
 @import "./modules/top-page";
 @import "./modules/mypage";
+@import "./modules/wrapper";
 @import "./user";
