--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,7 +19,8 @@
       .notify_area
         #notifications_count
       %ul#topmenu
-        %li.nav_mypage マイページ
+        %a{ href: :"/users/sign_up" }
+          %li.nav_mypage マイページ
         %li.nav_wantto お店を検索
         %li.nav_message メッセージ
         %li.nav_message イベント
