--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -7,12 +7,17 @@
           %li.bread_list_top
           %li
         #profile_area
-          %a
-          %a
-            %h1 shinji iida
-          %ul.follow_data
-            %li フォロー
-            %li フォロワー
+          %img#my_icon
+          %h1 shinji iida
+          %ul#follow_data
+            %li
+              フォロー：
+              %span
+                1
+            %li
+              フォロワー：
+              %span
+                2
           %p#profile_comment
             %a#sidebar_write_profile_button
           %ul#user_data
