--- a/app/assets/stylesheets/modules/_aside.scss
+++ b/app/assets/stylesheets/modules/_aside.scss
@@ -3,7 +3,6 @@
     width: 230px;
     margin-top: 20px;
     margin-left: 20px;
-    font-size: 13px;
     color: #333;
 }
 
@@ -35,6 +34,57 @@ img {
     -webkit-box-shadow: 0 1px 3px #ccc;
     box-shadow: 0 1px 3px #ccc;
 }
+
+#new_description, #iine_ranking, #ikitai_ranking, #retty_mybest, #gone_notice, #latest_comments, #ranking, #area_ranking, #footmark, #new_follower, #mymenu, #home_notice, #latest_posts {
+    position: relative;
+    margin-bottom: 25px;
+}
+
+#iine_ranking h2, #ikitai_ranking h2, #gone_notice h2, #latest_comments h2, #retty_ranking h2, #latest_posts h2 {
+    position: relative;
+    padding: 10px 10px 10px 34px;
+    border-bottom: 1px solid #dfd9cc;
+}
+
+#iine_ranking h2, #ikitai_ranking h2 {
+    border-right: 1px solid #fff;
+    border-left: 1px solid #fff;
+    border-top: 1px solid #fff;
+}
+
+#mypage_wrap #gone_notice ul, #mypage_wrap #latest_comments ul, #mypage_wrap #iine_ranking ul, #mypage_wrap #ikitai_ranking ul, #mypage_wrap #new_follower ul {
+    padding-bottom: 10px;
+}
+
+#mypage_wrap #iine_ranking li, #mypage_wrap #ikitai_ranking li {
+    position: relative;
+    padding-top: 0;
+    margin-top: 0;
+}
+
+#iine_ranking li.none, #ikitai_ranking li.none {
+    padding-top: 10px;
+    color: #999;
+}
+
+#iine_ranking li:last-child, #ikitai_ranking li:last-child, #footmark li:last-child, #new_follower li:last-child, #ranking ul li:last-child {
+    border-bottom: 0;
+}
+
+#iine_ranking li, #ikitai_ranking li {
+    position: relative;
+    min-height: 40px;
+    padding-left: 35px;
+}
+
+#iine_ranking li, #ikitai_ranking li, #area_ranking ul li {
+    position: relative;
+    border-bottom: 1px solid #dfd9cc;
+    border-top: 1px solid #fff;
+}
+
+
+
 
 ul {
     list-style: none;
