--- a/app/assets/stylesheets/modules/_header.scss
+++ b/app/assets/stylesheets/modules/_header.scss
@@ -4,6 +4,16 @@ body {
     text-align: center;
     font-family: 'Arial','Hiragino Kaku Gothic ProN','ヒラギノ角ゴ ProN W3','Meiryo','sans-serif';
     line-height: 1.5;
+    h1, h2, p, li, th, td, dt, dd, div, input, textarea {
+    font-size: 13px;
+    text-align: left;
+    list-style: none;
+    img {
+    margin: 0px;
+    padding: 0px;
+    border: none;
+    }
+}
 }
 
 img {
