--- a/app/assets/stylesheets/modules/_mypage.scss
+++ b/app/assets/stylesheets/modules/_mypage.scss
@@ -1,7 +1,7 @@
 .container{
 margin: 0 auto;
 text-align: left;
-width: 925px;
+width: 1000px;
 
 }
 
@@ -68,7 +68,12 @@ zoom: 1;
 }
 
 
-
+.go_top {
+    margin-bottom: 0;
+    padding: 10px 0;
+    margin: 15px auto;
+    text-align: right;
+}
 
 .footer {
   height: 108px;
