--- a/app/assets/stylesheets/modules/_wrapper.scss
+++ b/app/assets/stylesheets/modules/_wrapper.scss
@@ -1,5 +1,5 @@
 .wrapper {
-    height: calc(100vh - 61px);
+    height: 100%;
     position: relative;
     background: url(/images/bg_mypage.png);
     -webkit-box-shadow: inset 0 1px 4px 0 rgba(0,0,0,.2);
