--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -86,7 +86,8 @@
               いいねをもらった数
           %ul
             %li 行きたいをもらっていません
-      %p.go_top
-        %strong
+    %p.go_top
+      %a{:href => "javascript:void(0);", :onclick => "scrollToHead();"}
+        %strong ▲ ページトップへ戻る
 
 .footer
