--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -8,4 +8,5 @@
 @import "./modules/top-page";
 @import "./modules/mypage";
 @import "./modules/wrapper";
+@import "./modules/restaurant-page";
 @import "./user";
