--- a/app/views/restaurants/index.html.haml
+++ b/app/views/restaurants/index.html.haml
@@ -1,1 +1,23 @@
 = render 'layouts/header'
+
+ #restaurant.container
+  .wrapper
+  %p.go_top
+
+.footer
+  .footer_inner
+    %ul
+      %li 全国おすすめ口コミ
+      %li 人気レストラン
+      %li 期間別口コミ一覧
+      %li ヘルプ
+      %li 投稿ガイドライン
+    %ul
+      %li Rettyグルメ
+      %li 運営会社
+      %li 利用規約
+      %li プライバシーポリシー
+      %li 脆弱性のご連絡
+      %li 取材お申し込み
+      %li 店舗様お問い合わせ
+    .copyright Copyright (C) Retty, Inc. All Rights Reserved.
