--- a/app/assets/stylesheets/modules/_restaurant-page.scss
+++ b/app/assets/stylesheets/modules/_restaurant-page.scss
@@ -1,10 +1,11 @@
-#wrap_container{
-background-color: #faf9f4;
-height: calc(100vh - 95px);
-    .container {
-          .wrapper {
-          margin: 0 auto;
-          width: 980px;
-          }
+.overview {
+    box-sizing: border-box;
+    background-color: #fff;
+    position: relative;
+    padding: 20px;
+    border: 1px solid rgba(0,0,0,.1);
+    &__titlebar{
+    margin-bottom: 10px;
+    margin-top: 0!important;
     }
 }
