レビュー投稿のviewを作成

--- a/app/views/comments/new.html.haml
+++ b/app/views/comments/new.html.haml
@@ -41,8 +41,7 @@
           #retty_ranking
             %a
             %img{src: :"/images/bt_ranking.png" }
-        = render 'main-right'
-      = render 'aside'
+        = render 'form'
 
     %p.go_top
       %a{:href => "javascript:void(0);", :onclick => "scrollToHead();"}
