--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -8,15 +8,21 @@
             .table-box__main
               %h1.head_info_h1
                 %span.head_info_h1_main
+                  %span.head_info_name_additional
+                    まるがめせいめん
                   %span.overview_name
                     丸亀製麺
               %p.head_info_address
                 %span
                   道玄坂 |
                 %span.restaurant_state
+                  東京都
                 %span.restaurant_city
+                  渋谷区
                 %span.restaurant_address
+                  道玄坂
                 %span.restaurant_address
+                  2-2-9
             .table-box__add
               %p.overview__tel 090-7475-0068
         .overview__info
