--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -36,101 +36,115 @@
             %span
               .overview_tree
         .overview__titlebar
-      .nav_bar
-        %a
-        %a
-        %a
-        %a
-        %a
-      #main
-        %ul.bread_list_area
-          %li.bread_list_top
-          %li
-        #profile_area
-          %img#my_icon
-          %h1 shinji iida
-          %ul#follow_data
-            %li
-              フォロー：
-              %span
-                1
-            %li
-              フォロワー：
-              %span
-                2
-          %p#profile_comment
-            %a#sidebar_write_profile_button
-          %ul#user_data
-            %li
-              %a
-              %img{src: :"/images/ic_itta.png" }
-                行ったお店：
-              %span 0
-            %li
-              %a
-              %img{src: :"/images/ic_ikitai.png" }
-                行きたいお店：
-              %span 0
-          #mymenu
-            %a
-            %img{src: :"/images/bt_itta_ikitai.png" }
-            %a
-            %img{src: :"/images/bt_edit.png" }
-            %a
-            %img{src: :"/images/bt_draft.png" }
-          #retty_ranking
-            %a
-            %img{src: :"/images/bt_ranking.png" }
-        #contents_area
-          #reaction_area
-            #lastweek_reaction.reaction
-            #weekly_reaction.reaction
-          #latest_posts
-            %h2
-              %img{src: :"/images/ic_my_post.png" }
-                あなたの投稿
-            .post
-            %p.more
-              %a
-              %img{src: :"/images/ic_arrow.png" }
-                もっと読む
-          #gone_notice
-            %h2
-              %img{src: :"/images/ic_notice.png" }
-                最近参考になった通知
-            %ul
-              %li 最近参考になった通知はありません
-            %p.more もっと読む
-          #latest_comments
-            %h2
-              %img{src: :"/images/ic_comment.png" }
-                最近のコメント
-            %ul
-              %li 最近のコメントはありません
-            %p.more もっと読む
-          #new_follower
-            %h2
-              新しいフォロワー
-            %ul
-              %li 最近のフォロワーがいません
-      #aside
-        #iine_ranking
-          %h2
-            %img{src: :"/images/ic_iine_ranking.png" }
-              いいねをもらった数
-          %ul
-            %li いいねをもらっていません
-        #ikitai_ranking
-          %h2
-            %img{src: :"/images/ic_ikitai_ranking.png" }
-              いいねをもらった数
-          %ul
-            %li 行きたいをもらっていません
-    %p.go_top
-      %a{:href => "javascript:void(0);", :onclick => "scrollToHead();"}
-        %strong ▲ ページトップへ戻る
+      %ul.nav.nav-tabs
+        %li.nav-item
+          %a.nav-link.bg-primary タブ1
+        %li.nav-item
+          %a.nav-link.bg-primary タブ2
+        %li.nav-item
+          %a.nav-link.bg-primary タブ3
+        %li.nav-item
+          %a.nav-link.bg-primary タブ4
+      / .nav_bar
+      /   %a
+      /   %a
+      /   %a
+      /   %a
+      /   %a
 
-.footer
+
+
+
+
+/       #main
+/         %ul.bread_list_area
+/           %li.bread_list_top
+/           %li
+/         #profile_area
+/           %img#my_icon
+/           %h1 shinji iida
+/           %ul#follow_data
+/             %li
+/               フォロー：
+/               %span
+/                 1
+/             %li
+/               フォロワー：
+/               %span
+/                 2
+/           %p#profile_comment
+/             %a#sidebar_write_profile_button
+/           %ul#user_data
+/             %li
+/               %a
+/               %img{src: :"/images/ic_itta.png" }
+/                 行ったお店：
+/               %span 0
+/             %li
+/               %a
+/               %img{src: :"/images/ic_ikitai.png" }
+/                 行きたいお店：
+/               %span 0
+/           #mymenu
+/             %a
+/             %img{src: :"/images/bt_itta_ikitai.png" }
+/             %a
+/             %img{src: :"/images/bt_edit.png" }
+/             %a
+/             %img{src: :"/images/bt_draft.png" }
+/           #retty_ranking
+/             %a
+/             %img{src: :"/images/bt_ranking.png" }
+/         #contents_area
+/           #reaction_area
+/             #lastweek_reaction.reaction
+/             #weekly_reaction.reaction
+/           #latest_posts
+/             %h2
+/               %img{src: :"/images/ic_my_post.png" }
+/                 あなたの投稿
+/             .post
+/             %p.more
+/               %a
+/               %img{src: :"/images/ic_arrow.png" }
+/                 もっと読む
+/           #gone_notice
+/             %h2
+/               %img{src: :"/images/ic_notice.png" }
+/                 最近参考になった通知
+/             %ul
+/               %li 最近参考になった通知はありません
+/             %p.more もっと読む
+/           #latest_comments
+/             %h2
+/               %img{src: :"/images/ic_comment.png" }
+/                 最近のコメント
+/             %ul
+/               %li 最近のコメントはありません
+/             %p.more もっと読む
+/           #new_follower
+/             %h2
+/               新しいフォロワー
+/             %ul
+/               %li 最近のフォロワーがいません
+/       #aside
+/         #iine_ranking
+/           %h2
+/             %img{src: :"/images/ic_iine_ranking.png" }
+/               いいねをもらった数
+/           %ul
+/             %li いいねをもらっていません
+/         #ikitai_ranking
+/           %h2
+/             %img{src: :"/images/ic_ikitai_ranking.png" }
+/               いいねをもらった数
+/           %ul
+/             %li 行きたいをもらっていません
+/     %p.go_top
+/       %a{:href => "javascript:void(0);", :onclick => "scrollToHead();"}
+/         %strong ▲ ページトップへ戻る
+
+/ .footer
 / .wrapper
 /   .container#_popIn_body
 /     #mypage_wrap.cfx
