--- a/app/assets/stylesheets/modules/_restaurant-page.scss
+++ b/app/assets/stylesheets/modules/_restaurant-page.scss
@@ -31,14 +31,15 @@
                 font-size: 25px;
                 color: #000;
                 }
-                /*.head_info_address p{
-                padding: 3px 0;
-                color: #888;
-                margin-bottom: 4px;
-                }*/
+
             }
         }
     }
+}
+
+.nav {
+    width: 100%;
+    text-align: center;
 }
 
 .table-box__add p{
@@ -55,4 +56,144 @@ display: inline-block;
 padding: 3px 0;
 color: #888;
 margin-bottom: 4px;
+}
+
+.nav {
+    text-align: center;
+    padding-top: 20px;
+}
+
+.nav-tabs {
+    width: 100%;
+}
+
+
+.nav-tabs> li.active >a {
+    background: linear-gradient(#4c3315,#60401b);
+}
+
+.nav-tabs> li >a {
+    background: linear-gradient(#885b26,#60401b);
+    background-color: #60401b;
+    display: table-cell;
+    vertical-align: middle;
+    padding: 20px 0;
+    margin: 10px 0;
+    color: #fff;
+    text-decoration: none;
+}
+
+
+ .tab-content > .active  {
+    border: 1px solid rgba(0,0,0,.1);
+    background-color: #faf9f4;
+    margin-bottom: 10px;
+    padding: 15px;
+
+}
+
+.l-height-md {
+    line-height: 1.4!important;
+}
+
+.mb5 {
+    margin-bottom: 5px!important;
+}
+
+.bold {
+font-weight: bold;
+}
+
+.font-md {
+font-size: 14px;
+}
+
+.font-lg {
+font-size: 16px;
+}
+
+.frame{
+background-color: #fff;
+border: 1px solid rgba(0,0,0,.1);
+}
+
+.color-orange {
+color: #cd7401;
+}
+
+.table-box__sub #my_icon {
+    width: 50px;
+    height: 50px;
+    border: 5px solid #f8f6f2;
+    object-fit: cover;
+}
+
+.frame-type-1 {
+    border: 1px solid rgba(0,0,0,.1);
+    background-color: #fff;
+    padding: 15px;
+}
+
+.float-left{
+    float: left;
+}
+
+.float-right{
+    float: right;
+}
+
+.clearfix:after {
+  content: "";
+  clear: both;
+  display: block;
+}
+
+.table-box__main {
+    padding: 10px 15px;
+}
+
+.table-box__add{
+    padding: 10px 0;
+}
+
+.mb15 {
+    margin-bottom: 15px!important;
+}
+
+.mt15 {
+    margin-top: 15px!important;
+}
+
+.heading-type-2 {
+    background-color: #f5f5f5;
+    padding: 10px 15px;
+    border: 1px solid rgba(0,0,0,.1);
+    border-bottom: none;
+    box-shadow: rgba(255,255,255,.8) 1px 1px 0 inset;
+}
+
+.heading__ttl {
+    display: table-cell;
+    vertical-align: middle;
+    padding-right: 10px;
+    color: #000;
+    padding-top: 20px;
+}
+
+.btn-type-2 {
+    background: linear-gradient(#fff,#f0f0f0);
+}
+
+.btn {
+    display: inline-block;
+    margin-bottom: 0;
+    text-align: center;
+    vertical-align: middle;
+    cursor: pointer;
+    border: 1px solid rgba(0,0,0,.1);
+    white-space: nowrap;
+    font-size: 12px;
+    line-height: 1;
+    border-radius: 1px;
+    box-shadow: rgba(0,0,0,.1) 0 1px 2px;
 }
