--- a/app/assets/stylesheets/modules/_wrapper.scss
+++ b/app/assets/stylesheets/modules/_wrapper.scss
@@ -4,4 +4,5 @@
     background: url(/images/bg_mypage.png);
     -webkit-box-shadow: inset 0 1px 4px 0 rgba(0,0,0,.2);
     box-shadow: inset 0 1px 4px 0 rgba(0,0,0,.2);
+    min-height: 600px;
 }
