--- a/app/views/users/_aside.html.haml
+++ b/app/views/users/_aside.html.haml
@@ -1,12 +1,12 @@
 #aside
   #iine_ranking
-    %h2
+    %h2.bold
       %img{src: :"/images/ic_iine_ranking.png" }
         いいねをもらった数
     %ul
       %li いいねをもらっていません
   #ikitai_ranking
-    %h2
+    %h2.bold
       %img{src: :"/images/ic_ikitai_ranking.png" }
         いいねをもらった数
     %ul
