--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -25,5 +25,7 @@
         %li.nav_message メッセージ
         %li.nav_message イベント
         %li.nav_user 人を探す
-        %li.nav_account アカウント
+        %a{ href: :"/users/sign_out" }
+          %li.nav_account ログアウト
+
 
