--- a/app/views/restaurants/registrations/new.html.haml
+++ b/app/views/restaurants/registrations/new.html.haml
@@ -2,15 +2,15 @@
 #account-page.account-page
   .account-page__inner.clearfix
     .account-page__inner--left.account-page__header
-      %h2 Create Account
-      %h5 新規アカウントの作成
+      %h2 Registration
+      %h5 レストラン情報の登録
       = render "devise/shared/links"
     .account-page__inner--right.user-form
       = form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f|
         = devise_error_messages!
         .field
           .field-label
-            = f.label :name
+            = f.label :店名
           .field-input
             = f.text_field :name, autofocus: true
         .field
