--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,8 +1,7 @@
 #contents_area
   %h1 お店を投稿
-  = form_for [@restaurant,@message] do |f|
+  = form_for [@restaurant,@comment] do |f|
     = f.text_field :body, placeholder: "type a message"
     = f.label :image do
       = f.file_field :image, style: "display:none;"
-      %i.fa.fa-picture-o
     = f.submit "Send"
