--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,7 +1,8 @@
 #contents_area
   %h1 お店を投稿
   = form_for [@restaurant,@comment] do |f|
+    = f.file_field :image
     = f.text_field :body, placeholder: "type a message"
-    = f.label :image do
-      = f.file_field :image, style: "display:none;"
+    = f.hidden_field :rate
+    / = f.select :body
     = f.submit "Send"
