投稿機能の作成

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,5 @@
 @import "./modules/mypage";
 @import "./modules/wrapper";
 @import "./modules/restaurant-page";
+@import "./modules/form";
 @import "./user";
