--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,8 +1,26 @@
 #contents_area
   %h1 お店を投稿
   = form_for [@restaurant,@comment] do |f|
-    = f.file_field :image
-    = f.text_field :body, placeholder: "type a message"
-    = f.hidden_field :rate
-    / = f.select :body
-    = f.submit "Send"
+    #restaurant_area_upload
+      %span.label 店名
+      %span#restaurant_name 丸亀製麺
+      = f.label :image do
+        = f.file_field :image, style: "display:none;"
+        %img.fileinput-button{src: :"/images/comment/bt_photo.png"}
+    #review_area
+      %span.label 投稿内容
+      = f.text_field :body, placeholder: "(例)新宿で皆に長年人気のお店です！濃厚なソースにジューシーなお肉。一度食べてたら病みつきになります。前菜もいろいろなメニューが出てくるので、楽しみが広がります。最後に出てくるデザートは、このお店に来たら一度は食べておきたい一品です。"
+    #score_area
+      %span.label スコア
+      %ul
+        %li#bt_score_1
+          %img{src: :"/images/comment/bt_score_1_off.png"}
+        %li#bt_score_2
+          %img{src: :"/images/comment/bt_score_2_off.png"}
+        %li#bt_score_3
+          %img{src: :"/images/comment/bt_score_3_off.png"}
+      = f.hidden_field :rate
+    #submit_area
+      = f.label :commit do
+        = f.submit "Send"
+        %img#submit_area_button{src: :"/images/comment/bt_submit.png"}
