Restaurantsテーブルにカラムを追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,4 +13,5 @@
 @import "./modules/wrapper";
 @import "./modules/restaurant-page";
 @import "./modules/form";
+@import "./modules/map";
 @import "./user";
