ビューを修正

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -19,9 +19,9 @@
       .notify_area
         #notifications_count
       %ul#topmenu
-        %li.nav_mypage
-          = link_to "ログアウト", destroy_user_session_path, method: :delete, class: 'nav_mypage'
-        %li.nav_wantto お店を検索
+        %li.nav_mypage マイページ
+        %li.nav_wantto
+          = link_to "お店を検索", search_restaurants_path
         %li.nav_message メッセージ
         %li.nav_message イベント
         %li.nav_user 人を探す
