--- a/app/assets/stylesheets/modules/_restaurant-page.scss
+++ b/app/assets/stylesheets/modules/_restaurant-page.scss
@@ -197,3 +197,10 @@ color: #cd7401;
     border-radius: 1px;
     box-shadow: rgba(0,0,0,.1) 0 1px 2px;
 }
+
+#restaurant_icon{
+    width: 126px;
+    height: 126px;
+    border: 5px solid #f8f6f2;
+    object-fit: cover;
+}
