--- a/app/views/restaurants/registrations/new.html.haml
+++ b/app/views/restaurants/registrations/new.html.haml
@@ -11,12 +11,44 @@
           .field-label
             = f.label :店名
           .field-input
-            = f.text_field :name, autofocus: true
+            = f.text_field :name, placeholder: "(例)Retty本店"
         .field
           .field-label
             = f.label :email
           .field-input
             = f.email_field :email
+
+        .field
+          .field-label
+            = f.label :電話番号
+          .field-input
+            = f.text_field :phonenumber, placeholder: "(例)03-1234-5678"
+
+        .field
+          .field-label
+            = f.label :ランチ予算
+          .field-input
+            = f.select :budget_lunch, [ ["営業時間外", 0], ["〜1000円", 1000], ["〜2000円", 2000], ["〜3000円", 3000], ["〜4000円", 4000], ["〜5000円", 5000], ["〜6000円", 6000], ["〜8000円", 8000], ["〜10000円", 10000], ["〜15000円", 15000], ["〜20000円", 20000], ["〜30000円", 30000], ["〜60000円", 60000]]
+
+
+        .field
+          .field-label
+            = f.label :ディナー予算
+          .field-input
+            = f.select :budget_dinner, [["営業時間外", 0], ["〜1000円", 1000], ["〜2000円", 2000], ["〜3000円", 3000], ["〜4000円", 4000], ["〜5000円", 5000], ["〜6000円", 6000], ["〜8000円", 8000], ["〜10000円", 10000], ["〜15000円", 15000], ["〜20000円", 20000], ["〜30000円", 30000], ["〜60000円", 60000]]
+
+        .field
+          .field-label
+            = f.label :国名
+          .field-input
+            = f.select :country, [["-----", "NULL"], ["日本", "日本"], ["中国", "中国"], ["韓国", "韓国"], ["タイ", "タイ"], ["シンガポール", "シンガポール"], ["アメリカ", "アメリカ"], ["カナダ", "カナダ"], ["オーストラリア", "オーストラリア"], ["イギリス", "イギリス"], ["フランス", "フランス"], ["イタリア", "イタリア"], ["ドバイ", "ドバイ"]]
+
+        .field
+          .field-label
+            = f.label :住所
+          .field-input
+            = f.text_field :address, placeholder: "(例)東京都中央区入船2-1-1"
+
         .field
           .field-label
             = f.label :password
