--- a/app/views/restaurants/show.html.haml
+++ b/app/views/restaurants/show.html.haml
@@ -11,20 +11,13 @@
                   %span.head_info_name_additional
                     まるがめせいめん
                   %span.overview_name
-                    丸亀製麺
+                    = @restaurant.name
               %p.head_info_address
                 %span
-                  道玄坂 |
-                %span.restaurant_state
-                  東京都
-                %span.restaurant_city
-                  渋谷区
-                %span.restaurant_address
-                  道玄坂
-                %span.restaurant_address
-                  2-2-9
+                  = @restaurant.try(:address)
             .table-box__add
-              %p.overview__tel 090-7475-0068
+              %p.overview__tel
+                = @restaurant.try(:phonenumber)
         .overview__info
           .overview__info-cat
             %span
