変更を追加

--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -5,12 +5,13 @@
         %img#my_icon
       .table-box__main.float-left
         %p.color-orange.bold.font-md.mt5.mb5
-          シンジ
+          = comment.user.name
       .table-box__add.float-right
         %span.black-sm
           投稿:
-        %span 2017年05月28日 08:30
+        %span
+          = comment.created_at
     .mt15.mb15
       %p
-        １日だけだったので混んでいたが、釜揚げ美味しかった。
+        = comment.body
     %ul.list.list-horiz
