--- a/app/views/restaurants/_introduction.html.haml
+++ b/app/views/restaurants/_introduction.html.haml
@@ -1,5 +1,5 @@
 %frame
   %h2.font-lg.bold.mb5
-    早い、安い、うまいの三拍子が揃う人気のうどん店
+    = @restaurant.introduction.try(:title)
   %p.l-height-md
-    渋谷駅より徒歩5分のうどんチェーン店「丸亀製麺 渋谷道玄坂店」。便利な場所でリーズナブルに食事がとれる人気店。提供するのは讃岐うどんなので、麺は太くコシがあり、もちもちとした食感。つゆも出汁が効いていて美味しい。
+    = @restaurant.introduction.try(:body)
